overwrite all your stuff